--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -6,8 +6,15 @@ spring:
         master:
           username: root
           password: 123456
-          url: jdbc:mysql://localhost:3306/ry-vue?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+          url: jdbc:mysql://localhost:3306/my_security?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
           driver-class-name: com.mysql.cj.jdbc.Driver
+  # redis 配置
+  redis:
+    host: r-8vb72d6d3d3aadf4pd.redis.zhangbei.rds.aliyuncs.com
+    port: 1345
+    database: 0
+    password: Jqfx123!@#
+    timeout: 10s
 
   security:
     user:
