--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,15 @@ spring:
   profiles:
     active: local
 
+#token配置
+token:
+  #令牌自定义标识
+  header: Authorization
+  #令牌秘钥
+  secret: abcdefghijklmnopqrstuvwxyz
+  #令牌有效期（默认30分钟）
+  expireTime: 30
+
 #Mybatis plus配置
 #mybatis-plus:
 #  configuration:
